--- a/droid.yml
+++ b/droid.yml
@@ -16,6 +16,24 @@ variables:
 
 tasks:
     -
+      name: "Install droid-managed /etc/hosts.deny configuration."
+      command: "fs:copy"
+      arguments:
+          src: "!{{ mod_path }}/assets/etc/hosts.deny.template"
+          dest: "/etc/hosts.deny"
+    -
+      name: "Install droid-managed /etc/hosts.allow configuration."
+      command: "fs:copy"
+      arguments:
+          src: "!{{ mod_path }}/assets/etc/hosts.allow.template"
+          dest: "/etc/hosts.allow"
+    -
+      name: "Install droid-managed /etc/modprobe.d/lockd.conf configuration."
+      command: "fs:copy"
+      arguments:
+          src: "!{{ mod_path }}/assets/etc/modprobe.d/lockd.conf.template"
+          dest: "/etc/modprobe.d/lockd.conf"
+    -
       name: "Update packages"
       command: "apt-get:update"
     -
@@ -24,6 +42,18 @@ tasks:
       arguments:
           package: "nfs-server"
     -
+      name: "Install droid-managed /etc/default/nfs-common configuration."
+      command: "fs:copy"
+      arguments:
+          src: "!{{ mod_path }}/assets/etc/default/nfs-common.template"
+          dest: "/etc/default/nfs-common"
+    -
+      name: "Install droid-managed /etc/default/nfs-kernel-server configuration."
+      command: "fs:copy"
+      arguments:
+          src: "!{{ mod_path }}/assets/etc/default/nfs-kernel-server.template"
+          dest: "/etc/default/nfs-kernel-server"
+    -
       name: "Make shared directories"
       command: "fs:mkdir"
       arguments:
@@ -31,16 +61,28 @@ tasks:
           mode: "{{{ item.mode }}}"
       with_items: module_nfs_server_shares
     -
+      name: "Chane file mode of shared directories"
+      command: "fs:chmod"
+      arguments:
+          filename: "{{{ item.path }}}"
+          mode: "{{{ item.mode }}}"
+      with_items: module_nfs_server_shares
+    -
       name: "Install exports configuration"
       command: "fs:copy"
       arguments:
-          src: "!{{ mod_path }}/assets/exports.template"
+          src: "!{{ mod_path }}/assets/etc/exports.template"
           dest: "/etc/exports"
     -
       name: "Stop NFS Kernel Service"
       command: "service:stop"
       arguments:
           name: "nfs-kernel-server"
+    -
+      name: "Restart NFS Common Service"
+      command: "service:restart"
+      arguments:
+          name: "nfs-common"
     -
       name: "Start NFS Kernel Service"
       command: "service:start"
